--- a/ColorDemo/Base.lproj/Main.storyboard
+++ b/ColorDemo/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14105" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14105" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Pho-Rb-7lq">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -19,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aDW-2N-i48">
-                                <rect key="frame" x="20" y="70" width="335" height="150"/>
+                                <rect key="frame" x="20" y="166" width="335" height="150"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DuO-QF-EDp">
                                         <rect key="frame" x="0.0" y="0.0" width="335" height="150"/>
@@ -51,6 +51,86 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1372" y="130.88455772113943"/>
+        </scene>
+        <!--News-->
+        <scene sceneID="qg0-El-xcO">
+            <objects>
+                <viewController title="News" id="phx-zu-9cq" customClass="ListViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="6nJ-y0-PFB">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="JnZ-D5-rfK">
+                                <rect key="frame" x="10" y="126" width="355" height="531"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="ListCell" rowHeight="80" id="h7b-4U-3Ms" customClass="ListCell">
+                                        <rect key="frame" x="0.0" y="28" width="355" height="80"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="h7b-4U-3Ms" id="NnV-PK-YhI">
+                                            <rect key="frame" x="0.0" y="0.0" width="355" height="79.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2AB-U3-cpI">
+                                                    <rect key="frame" x="10" y="10" width="335" height="60"/>
+                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                </view>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="2AB-U3-cpI" secondAttribute="trailing" constant="10" id="AaP-6M-MLB"/>
+                                                <constraint firstAttribute="bottom" secondItem="2AB-U3-cpI" secondAttribute="bottom" constant="9.5" id="RcH-iJ-ZN3"/>
+                                                <constraint firstItem="2AB-U3-cpI" firstAttribute="leading" secondItem="NnV-PK-YhI" secondAttribute="leading" constant="10" id="u7a-Ce-8lr"/>
+                                                <constraint firstItem="2AB-U3-cpI" firstAttribute="top" secondItem="NnV-PK-YhI" secondAttribute="top" constant="10" id="zAk-pM-Xza"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="viewContainerBack" destination="2AB-U3-cpI" id="kUZ-Ix-DHd"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="phx-zu-9cq" id="dlM-U0-zdS"/>
+                                    <outlet property="delegate" destination="phx-zu-9cq" id="Pjn-e1-c98"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="gI8-HT-zAD" firstAttribute="trailing" secondItem="JnZ-D5-rfK" secondAttribute="trailing" constant="10" id="2Za-5D-eei"/>
+                            <constraint firstItem="gI8-HT-zAD" firstAttribute="bottom" secondItem="JnZ-D5-rfK" secondAttribute="bottom" constant="10" id="Jl1-3R-nEb"/>
+                            <constraint firstItem="JnZ-D5-rfK" firstAttribute="top" secondItem="gI8-HT-zAD" secondAttribute="top" constant="10" id="e55-JY-Gq1"/>
+                            <constraint firstItem="JnZ-D5-rfK" firstAttribute="leading" secondItem="gI8-HT-zAD" secondAttribute="leading" constant="10" id="hy4-ah-zJj"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="gI8-HT-zAD"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="vkM-od-glV"/>
+                    <connections>
+                        <outlet property="tblView" destination="JnZ-D5-rfK" id="hMg-9M-Pwb"/>
+                        <segue destination="BYZ-38-t0r" kind="show" identifier="slidetonewsdetail" id="Yc8-OW-mgg"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0eK-cp-HgW" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="364" y="185"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="Niq-Ly-CDb">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Pho-Rb-7lq" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="RYu-iV-LF1">
+                        <rect key="frame" x="0.0" y="20" width="375" height="96"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="phx-zu-9cq" kind="relationship" relationship="rootViewController" id="J2c-77-iCn"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="T30-l2-t6P" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-287.19999999999999" y="130.88455772113943"/>
         </scene>
     </scenes>
 </document>
